[gd_scene load_steps=10 format=3 uid="uid://cl1x05px4hk0l"]

[ext_resource type="Script" path="res://enviroment/door/door.gd" id="1_sqjx2"]
[ext_resource type="Texture2D" uid="uid://jo3vaij8268g" path="res://enviroment/bioms/forest/forest_stage1_door_top.png" id="2_2d13b"]
[ext_resource type="Texture2D" uid="uid://bqsirsom0u7bv" path="res://enviroment/bioms/forest/forest_stage1_door_middle.png" id="3_ntdym"]
[ext_resource type="Texture2D" uid="uid://b08i1lbvuulwf" path="res://enviroment/bioms/forest/forest_stage1_door_bottom.png" id="4_uvfv3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1w2ct"]
size = Vector2(16, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3fbpr"]
size = Vector2(24, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1oids"]
size = Vector2(8, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_npaen"]
size = Vector2(9, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x7ntf"]
size = Vector2(16, 10)

[node name="Door" type="Node2D"]
script = ExtResource("1_sqjx2")

[node name="TopSprite" type="Sprite2D" parent="."]
z_index = 2
texture = ExtResource("2_2d13b")
hframes = 3
vframes = 2

[node name="MiddleSprite" type="Sprite2D" parent="."]
z_index = -2
texture = ExtResource("3_ntdym")
hframes = 3
vframes = 2

[node name="BottomSprite" type="Sprite2D" parent="."]
z_index = -12
texture = ExtResource("4_uvfv3")
hframes = 3
vframes = 2

[node name="Collision" type="Node2D" parent="."]

[node name="Ground" type="StaticBody2D" parent="Collision"]
z_index = 10
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Collision/Ground"]
shape = SubResource("RectangleShape2D_1w2ct")

[node name="Wall" type="StaticBody2D" parent="Collision"]
z_index = 10
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Collision/Wall"]
position = Vector2(-4, 9)
shape = SubResource("RectangleShape2D_3fbpr")
debug_color = Color(0.894118, 0.6, 0.701961, 0.419608)

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Collision/Wall"]
position = Vector2(-4, -9)
shape = SubResource("RectangleShape2D_3fbpr")
debug_color = Color(0.894118, 0.6, 0.701961, 0.419608)

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Collision/Wall"]
position = Vector2(-12, 0)
shape = SubResource("RectangleShape2D_1oids")
debug_color = Color(0.933333, 0.6, 0.701961, 0.419608)

[node name="PlayerDetector" type="Area2D" parent="Collision"]
collision_layer = 0
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="Collision/PlayerDetector"]
position = Vector2(-3.5, 0)
shape = SubResource("RectangleShape2D_npaen")
debug_color = Color(1, 1, 0, 0.419608)

[node name="WallWhenClosed" type="StaticBody2D" parent="Collision"]
z_index = 10
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Collision/WallWhenClosed"]
shape = SubResource("RectangleShape2D_x7ntf")
debug_color = Color(1, 0, 0, 0.419608)
